fix: spacing between submit button and form

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -31,6 +31,7 @@ textarea, input {
   color: #fff;
 }
 
+
 textarea {
   resize: none;
 }
@@ -46,6 +47,10 @@ button, input[type="button"], input[type="submit"] {
   border-radius: 80px;
   background-color: #383838;
   color: #fff;
+}
+
+input[type="submit"] {
+  margin-top: 12px;
 }
 
 button:hover, input[type="button"]:hover, input[type="submit"]:hover{
